<resources>
    <string name="app_name">Lens Emblem</string>

    <string name="service_notification_channel_name">Lens Emblem Service</string>
    <string name="service_notification_channel_description">The primary notifications delivered by Lens Emblem</string>
    <string name="error_could_not_find_hero">Could not find matching hero for \[%1$s - %2$s\]</string>

    <string name="screen_capture_permission_btn_text">Enable Screen Capture</string>

    <string name="menu_sync">Sync Hero Data</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_acknowledgements">Acknowledgements</string>
    <string name="menu_use_embla_theme">Use Embla theme</string>

    <string name="start_service_btn_text">Start Checker</string>
    <string name="adjust_bounds_btn_text">Adjust OCR Bounds</string>

    <string name="iv_results_summary_title">IV Results</string>
    <string name="iv_results_summary_short_description">View IVs of previously scanned heroes</string>

    <string name="content_description_back">Go back</string>
    <string name="content_description_save">Save</string>

    <string name="bounds_picker_instructions">Let\'s take a screenshot! Head over to Heroes and tap "Take screenshot" on the Lens Emblem notification!</string>
    <string name="service_notification_title">Screen Capture Running</string>
    <string name="service_notification_message">Tap here to process your hero\'s stats</string>
    <string name="found_hero_notification_title">View Hero Stats</string>
    <string name="found_hero_notification_message">Processing failed, but we found %1$s. Tap to view their stats.</string>
    <string name="notification_stop_service">Stop</string>
    <string name="notification_screenshot">Take screenshot</string>

    <string name="loading_heroes">Loading Hero Data</string>
    <string name="fetching_heroes">Downloading Hero Data</string>
    <string name="network_error">Something went wrong. Please try again.</string>

    <string name="permissions_title">Note on Screenshots</string>
    <string name="permissions_rationale">We can\'t process your screen without certain permissions. Don\'t worry, we only take screenshots when you prompt us to.</string>
    <string name="tutorials_title">Tutorial</string>
    <string name="tutorials_message">First-time user or just forgetful? Try the tutorial.</string>
    <string name="tutorial_button">Begin Tutorial</string>
    <string name="skip">Skip</string>
    <string name="done">Done</string>
    <string name="service_title">Begin Capturing</string>
    <string name="service_rationale">Start the service to begin processing heroes. It shows up as a notification.</string>
    <string name="bounds_picker_title">Fine-Tune (optional)</string>
    <string name="bounds_picker_rationale">All phones are different! The bounds picker will help you adjust the regions the app reads when it processes screenshots.</string>

    <string name="tutorial_1_text">Start the checker service by tapping the "Start Checker" button on the home screen.</string>
    <string name="tutorial_2_text">Tap on the service notification to start the check.</string>
    <string name="tutorial_3_text">Make sure you are viewing the hero\'s full profile!</string>
    <string name="tutorial_4_text">Trouble matching IVs? Try adjusting the bounds.</string>

    <string name="service_started">Service is running! Check your notifications.</string>
    <string name="service_already_running">Service is already running</string>
    <string name="service_taking_screenshot">Taking screenshot…</string>
    <string name="service_processing">Processing…</string>

    <string name="hero_boon_bane">%1$s (%2$s)\n+%3$s, -%4$s</string>

    <string name="notifications">Notifications</string>
    <string name="no_notifications">No notifications</string>

    <string name="heroes">Heroes</string>
    <string name="view_heroes">View Heroes</string>
    <string name="reset_heroes">Reset to Default</string>

    <string name="filter_sort_by">Sort By</string>
    <string name="filter_rarity">Rarity</string>
    <string name="hero_stats">Hero Stats</string>

    <string name="could_not_parse">Whoops! Something went wrong. Try checking your bounds.</string>
    <string name="missing_screenshot_permission">Missing screenshot permission! Please try again.</string>

    <string name="heroes_last_updated">Heroes last synced on %1$s</string>

    <string name="content_description_hero_photo">Hero profile photo</string>
    <string name="stats">Stats</string>
    <string name="stats_lvl1_label">Lvl. 1</string>
    <string name="stats_lvl40_label">Lvl. 40</string>
    <string name="equipped">Equipped?</string>
    <string name="rarity">Rarity</string>
    <string name="atk">ATK</string>
    <string name="spd">SPD</string>
    <string name="hp">HP</string>
    <string name="def">DEF</string>
    <string name="res">RES</string>
    <string name="stat_placeholder">-</string>

    <string name="sample_notification_time">10m</string>

    <string name="acknowledgements">Acknowledgements</string>
</resources>
