<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_notifications"
        android:title="@string/menu_notifications"
        android:icon="@drawable/ic_notifications_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_sync_data"
        android:title="@string/menu_sync"
        android:icon="@drawable/ic_sync_24dp"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_view_heroes"
        android:title="@string/view_heroes"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_acknowledgements"
        android:title="@string/menu_acknowledgements"
        app:showAsAction="never"/>

</menu>