<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:title="@android:string/search_go"
        android:icon="@drawable/ic_search_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_sync_data"
        android:title="@string/menu_sync"
        android:icon="@drawable/ic_sync_24dp"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_acknowledgements"
        android:title="@string/menu_acknowledgements"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_reset_hero_data"
        android:title="@string/reset_heroes"
        app:showAsAction="never"/>

</menu>