<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_marginTop="32dp"
    app:cardBackgroundColor="@color/md_white_1000"
    app:cardElevation="4dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/horizontal_margin"
        tools:fitsSystemWindows="false">

        <ImageView
            android:id="@+id/notification_app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_notification"
            android:tint="@color/md_grey_600"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/notification_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/app_name"
            android:textColor="@color/md_grey_600"
            app:layout_constraintStart_toEndOf="@+id/notification_app_icon"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/notification_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/sample_notification_time"
            android:textColor="@color/md_grey_600"
            app:layout_constraintStart_toEndOf="@+id/notification_app_name"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/notification_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textColor="@color/md_grey_800"
            android:text="@string/service_notification_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notification_app_icon"/>

        <TextView
            android:id="@+id/notification_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="16sp"
            android:textColor="@color/md_grey_600"
            android:text="@string/service_notification_message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notification_title"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
