<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:fitsSystemWindows="true">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/vertical_margin"
                android:background="@android:color/transparent"
                android:fitsSystemWindows="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:textAlignment="center"
                    android:text="@string/app_name"
                    android:textColor="?android:textColorPrimary"
                    android:fontFamily="@font/heroes_legend"
                    android:fitsSystemWindows="true"/>

            </android.support.v7.widget.Toolbar>

            <android.support.v7.widget.CardView
                style="@style/CardViewStyle"
                android:id="@+id/permissions_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/toolbar"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginBottom="@dimen/vertical_spacer_margin"
                app:cardBackgroundColor="?colorPrimary">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/CardViewTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/large_text_size"
                        android:text="@string/permissions_title"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:lineSpacingMultiplier="1.15"
                        android:textSize="@dimen/small_text_size"
                        android:text="@string/permissions_rationale"/>

                    <fragment
                        android:id="@+id/permissions_fragment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:name="com.andrewvora.apps.lensemblem.permissions.PermissionsFragment"
                        tools:layout="@layout/fragment_permissions"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/CardViewStyle"
                android:id="@+id/start_service_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/permissions_card"
                android:layout_marginTop="@dimen/vertical_spacer_margin"
                android:layout_marginBottom="@dimen/vertical_spacer_margin"
                app:cardBackgroundColor="?colorPrimary">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/CardViewTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/large_text_size"
                        android:text="@string/service_title"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:lineSpacingMultiplier="1.15"
                        android:textSize="@dimen/small_text_size"
                        android:text="@string/service_rationale"/>

                    <Button
                        style="@style/Base.Widget.AppCompat.Button.Colored"
                        android:id="@+id/start_service_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:textColor="@color/md_white_1000"
                        android:text="@string/start_service_btn_text"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/CardViewStyle"
                android:id="@+id/bounds_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/start_service_card"
                android:layout_marginTop="@dimen/vertical_spacer_margin"
                android:layout_marginBottom="@dimen/vertical_spacer_margin"
                app:cardBackgroundColor="?colorPrimary">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/CardViewTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/large_text_size"
                        android:text="@string/bounds_picker_title"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:lineSpacingMultiplier="1.15"
                        android:textSize="@dimen/small_text_size"
                        android:text="@string/bounds_picker_rationale"/>

                    <Button
                        style="@style/Base.Widget.AppCompat.Button.Colored"
                        android:id="@+id/bound_picker_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:textColor="@color/md_white_1000"
                        android:text="@string/adjust_bounds_btn_text"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/progress_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:alpha="0"
                app:cardElevation="4dp"
                app:cardCornerRadius="4dp"
                app:contentPadding="12dp"
                tools:alpha="1">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ProgressBar
                        android:id="@+id/progress_indicator_bar"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:indeterminate="true"/>

                    <TextView
                        android:id="@+id/progress_indicator_message"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:textSize="14sp"
                        tools:text="@string/loading_heroes"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/last_hero_sync_timestamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bounds_card"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="@dimen/vertical_margin"
                android:paddingBottom="8dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="?android:textColorTertiary"
                tools:text="Last updated June 16, 2018"/>

        </RelativeLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
