<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingTop="4dp"
            android:clickable="true"
            android:focusable="true"
            android:textAlignment="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:fontFamily="@font/heroes_legend"/>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="48dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                style="@style/CardViewStyle"
                android:id="@+id/permissions_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginBottom="@dimen/vertical_spacer_margin">

                <fragment
                    android:id="@+id/permissions_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:name="com.andrewvora.apps.lensemblem.permissions.PermissionsFragment"
                    tools:layout="@layout/fragment_permissions"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/CardViewStyle"
                android:id="@+id/start_service_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/permissions_card"
                android:layout_marginTop="@dimen/vertical_spacer_margin"
                android:layout_marginBottom="@dimen/vertical_spacer_margin">

                <Button
                    android:id="@+id/start_service_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/start_service_btn_text"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/CardViewStyle"
                android:id="@+id/bounds_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/start_service_card"
                android:layout_marginTop="@dimen/vertical_spacer_margin"
                android:layout_marginBottom="@dimen/vertical_spacer_margin">

                <Button
                    android:id="@+id/bound_picker_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/adjust_bounds_btn_text"/>

            </android.support.v7.widget.CardView>

            <ProgressBar
                android:id="@+id/progress_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:indeterminate="true"
                android:visibility="gone"/>

        </RelativeLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
